--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "~bootswatch/dist/flatly/bootstrap.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
